# confessio

./: .flake8  .gitignore  CLAUDE.md  LICENSE.data  README.md  ci_requirements.txt  deploy_prod.sh  dev_requirements.txt  env.sample  prod.sh  prod_requirements.txt  pyproject.toml  requirements.txt  search_confessions_paragraph.py  tach.toml
.claude/: settings.json
.github/workflows/: linter_and_unittest.yml
ansible/: README.md
ansible/prod/: cron.yml  deploy.yml  hosts  install.yml  manage.yml  manage_tmux.yml
attaching/: admin.py  apps.py  models.py  public_service.py  signals.py  tasks.py
attaching/migrations/: 0001_initial.py  0002_alter_image_options_alter_historicalimage_table_and_more.py  0003_alter_image_prunings.py  0004_alter_historicalimage_website_alter_image_website.py
attaching/services/: image_service.py  recognize_image_service.py  upload_image_service.py  worker_recognize_service.py
core/: production_settings.py  profiling_settings.py  profiling_urls.py  settings.py  urls.py  views.py
core/management/: abstract_cleaning_command.py  abstract_command.py
core/models/: base_models.py  base_moderation_models.py
core/otel/: exporter.py  metrics_service.py  middlewares.py
core/utils/: async_utils.py  discord_utils.py  heartbeat_utils.py  llm_utils.py  log_utils.py
crawling/: apps.py  models.py  public_service.py  public_worflow.py  tasks.py  urls.py  views.py
crawling/migrations/: 0001_initial.py  0003_log.py  (+12 more)
django-pixel/: requirements.txt
docs/: confessio_fr_org_interface.md
fetching/: admin.py  apps.py  process.py  public.py  public_service.py  urls.py  views.py
front/: admin.py  api.py  front_api.py  public_service.py  urls.py
home/: admin.py  api.py  apps.py  models.py  signals.py  tasks.py  urls.py  views.py
jsoneditor/: README.md  __init__.py  apps.py  forms.py
registry/: admin.py  apps.py  public_service.py  signals.py  urls.py  views.py
scheduling/: admin.py  process.py  public.py  public_model.py  public_service.py  public_workflow.py  tasks.py  urls.py
scraping/: crawl_messesinfos_churches.py  search_confessions_paragraph.py  search_confessions_paragraphs.py  search_confessions_urls.py
scrapping/: search_confessions_paragraph.py
scripts/: check_dependencies.py
sourcing/: apps.py  signals.py
tests/: tests_extract_content.py
utils/: download_content.py  extract_content.py
watch/: look_messesinfo.py
(+1301 files in other folders)
