[project]
name = "confessio"
version = "0.1.0"
requires-python = "~= 3.13.0"

dependencies = [
    # Used by django
    "Django==5.2.9",
    "gunicorn==23.0.0",
    "python-dotenv==1.0.0",
    "whitenoise==6.6.0",
    "django-ses==3.5.2",
    "psycopg2-binary==2.9.11",
    "django-request==1.6.3",
    "django-simple-history==3.7.0",
    "django-ninja==1.4.1",
    "django-cors-headers==4.7.0",

    # Used in django admin
    "django-leaflet==0.29.0",

    # Used in django app
    "folium==0.14.0",

    # Used by scraping
    "Unidecode==1.3.4",
    "requests==2.32.4",
    "httpx==0.27.2",
    "beautifulsoup4==4.14.2",
    "fructose==0.0.11",
    "haversine==2.8.1",
    "scikit-learn==1.5.1",
    "pandas==2.3.3",
    "keras==3.12.0",
    "numpy==2.3.5",
    "scipy==1.16.3",
    "tqdm==4.66.3",
    "pgvector==0.3.2",
    "psutil==6.0.0",
    "pydantic==2.9.0",
    "openai==2.6.1",
    "python-dateutil==2.9.0.post0",
    "jsonschema==4.23.0",
    "PyMuPDF==1.25.5",

    # Used in django management commands
    "django-dbbackup==5.1.0",
    "django-storages==1.14.2",
    "django-background-tasks==1.2.8",
    "boto3==1.34.15",
    "opentelemetry-api==1.28.2",
    "opentelemetry-sdk==1.28.2",
    "opentelemetry-instrumentation-django==0.49b2",
    "opentelemetry-exporter-otlp==1.28.2",
]

[dependency-groups]
dev = [
    { include-group = "ci" },  # Include all CI dependencies

    # Heavy dependencies
    "sentence-transformers==2.5.1",

    # Differs from production
    "tensorflow==2.20.0",

    # Used to deploy
    "ansible==12.2.0",

    # Used to investigate RAM usage
    "memory-profiler==0.61.0",
    "matplotlib==3.9.2",

    # Used to investigate performance
    "django-silk==5.3.1",
]

prod = [
    # Heavy dependencies
    "sentence-transformers==2.5.1",

    # Differs from dev
    "tensorflow-cpu==2.20.0",
]

ci = [
    # Linter
    "flake8==7.1.1",
    "pep8-naming==0.14.1",

    # Caching for tests
    "simple_cache==0.35",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true  # Only use this index for packages that explicitly reference it

[tool.uv.sources]
# This tells uv: "Whenever you see 'torch', only look in the 'pytorch-cpu' index"
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }